--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     networks:
       - internal_network
 ### Uncomment to enable DB persistance
-#    volumes:
-#      - ./postgres:/var/lib/postgresql/data
+    volumes:
+      - ./postgres:/var/lib/postgresql/data
 
   redis:
     restart: always
@@ -16,8 +16,8 @@ services:
     networks:
       - internal_network
 ### Uncomment to enable REDIS persistance
-#    volumes:
-#      - ./redis:/data
+    volumes:
+      - ./redis:/data
 
 #  es:
 #    restart: always
@@ -51,7 +51,7 @@ services:
       - ./public/system:/mastodon/public/system
 
   streaming:
-    build: .
+    #build: .
     image: tootsuite/mastodon
     restart: always
     env_file: .env.production
@@ -66,7 +66,7 @@ services:
       - redis
 
   sidekiq:
-    build: .
+    #build: .
     image: tootsuite/mastodon
     restart: always
     env_file: .env.production
