--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       - ./public/system:/mastodon/public/system
 
   streaming:
-    build: .
+#    build: .
     image: tootsuite/mastodon
     restart: always
     env_file: .env.production
@@ -66,7 +66,7 @@ services:
       - redis
 
   sidekiq:
-    build: .
+#    build: .
     image: tootsuite/mastodon
     restart: always
     env_file: .env.production
